# fafafa-skills-fusion

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  DESIGN.md  EXECUTION_PROTOCOL.md  LICENSE  PARALLEL_EXECUTION.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SESSION_RECOVERY.md  SKILL.md  findings.md  progress.md  task_plan.md
.claude/: settings.example.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: CLI_CONTRACT_MATRIX.md  COMPATIBILITY.md  E2E_EXAMPLE.md  HOOKS_SETUP.md  REPO_CONVERGENCE_SUMMARY_2026-03.md  REPO_HYGIENE.md  RUNTIME_KERNEL_DESIGN.md  RUST_FUSION_BRIDGE_ROADMAP.md  UPGRADE_v2_COMPAT.md  V3_GA_EXECUTION_ROADMAP.md  WEEKLY_PLAN_v2.1.md
prompts/: code_review.md  commit_message.md  decompose.md  error_recovery.md  tdd.md  two_phase_review.md  understand.md
reviews/: continuous-development-implementation-review.md  continuous-development-limitation-analysis.md  hook-stdin-fix-review.md  regression-test-checklist.md  repo-convergence-change-groups.md  repo-convergence-pr-summary.md
rust/: Cargo.toml  README.md
rust/crates/fusion-cli/: Cargo.toml
rust/crates/fusion-cli/src/: achievements.rs  agent_handoff.rs  agent_orchestrator.rs  audit.rs  bootstrap.rs  bootstrap_config.rs  catchup.rs  catchup_render.rs  catchup_session.rs  catchup_taskplan.rs  cli.rs  dispatch.rs  doctor.rs  git.rs  hooks.rs  inspect.rs  loop_guardian.rs  main.rs  models.rs  posttool.rs  posttool_progress.rs  posttool_runtime.rs  pretool.rs  regression.rs  render.rs  render_status.rs  render_taskplan.rs  render_tasks.rs  reporting.rs  runner.rs  runner_backend.rs  runner_control.rs  runner_route.rs  safe_backlog.rs  safe_backlog_core.rs  safe_backlog_support.rs  selfcheck.rs  status.rs  status_artifacts.rs  status_cmd.rs  (+6 more)
rust/crates/fusion-cli/tests/: cli_smoke.rs  repo_contract.rs  shell_contract.rs
rust/crates/fusion-provider/: Cargo.toml
rust/crates/fusion-provider/src/: lib.rs
rust/crates/fusion-runtime-io/: Cargo.toml
rust/crates/fusion-runtime-io/src/: lib.rs
(+146 files in other folders)
