[workspace]
members = [
  "crates/fusion-cli",
  "crates/fusion-provider",
  "crates/fusion-runtime-io",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["fafafa studio"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
thiserror = "2.0"
tempfile = "3.14"
which = "6.0"
