[package]
name = "fusion-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
